# otus-3

./: CMakeLists.txt
src/: allocator_traits.cpp  logging_allocator.cpp  main.cpp  my_allocator.cpp  my_allocator.hpp  my_container.hpp  new_overload.cpp  polymorphic_allocator.cpp  polymorphism.cpp  simple_allocator.cpp
